# skripsie_2020

./: .gitignore  CMakeLists.txt  README.md  configure_debug.sh  configure_release.sh
examples/: run_faulty_ksa4.sh  run_good_ksa4.sh
examples/ex_data/: josim  ksa4.cir  ksa4_faulty.cir  parse_params.json  processing_params.json  tp.csv
include/: CliOptions.h  LogicTree.h  Netlist.h  Processing.h
src/: CliOptions.cpp  LogicTree.cpp  Netlist.cpp  Processing.cpp  main.cpp
